Changelog
=========


3.3.2 (unreleased)
------------------

- Nothing changed yet.


3.3.1 (2022-07-08)
------------------

- Support dead brains in WorkflowSecurityUpdater. [njohner]


3.3.0 (2022-03-28)
------------------

- Allow choosing a specific instance to run upgrade commands. [njohner]


3.2.0 (2022-01-31)
------------------

- Log memory usage during upgrade steps. [njohner]
- Write upgrade step durations to a file. [njohner]
- Sweep cache during upgrade if memory is critical. [njohner]


3.1.1 (2021-09-07)
------------------

- Add method to iterate over brains in upgrade step. [njohner]


3.1.0 (2021-06-21)
------------------

- Add intermediate commit option to commit the transaction after each installed upgrade. [deiferni]


3.0.4 (2021-01-21)
------------------

- Do not call ``cookResources`` on dummy old resource registry tools.  [maurits]

- When using Python3, use importlib instead of the deprecated imp module
  to look for upgrade steps.
  This removes the warning displayed about unclosed resources.
  Fixes `issue 211 <https://github.com/4teamwork/ftw.upgrade/issues/211>`.
  [ale-rt]


3.0.3 (2020-10-10)
------------------

- Do not depend anymore on argparse because it is already included in
  Python 2.7 and in Python 3 since version 3.2
  Fixes `issue 209 <https://github.com/4teamwork/ftw.upgrade/issues/209>`.
  [ale-rt]


3.0.2 (2020-08-27)
------------------

- Properly compute ``find_start_version`` when the profile has combined
  upgrade steps
  Fixes `issue 207 <https://github.com/4teamwork/ftw.upgrade/issues/207>`. [ale-rt]
- Check for six.binary_type to avoid AttributeErrors when running under Python3.
  [erral]


3.0.1 (2020-06-09)
------------------

- This Plone add-on now requires six >= 1.12.0. [mbaechtold]
- Instance port number discovery in ``wsgi.ini`` works also when the fast listen
  option is choosen.
  Fixes `issue 200 <https://github.com/4teamwork/ftw.upgrade/issues/200>`. [ale-rt]
